<resources>
    <string name="app_name">GamesNews</string>
    <string name="app_title">Games News</string>
    <string name="app_slogan">Keep alert</string>
    <string name="username_login">Username</string>
    <string name="password_login">Old Password</string>
    <string name="sign_in_login">Sign in</string>
    <string name="error_login_connect">We cannot load your sesion</string>
    <string name="main_menu_drawer_option">Drawer_option</string>
    <string name="search_title">Search…</string>
    <string name="main_menu_title">News</string>
    <string name="drawer_menu_news">News</string>
    <string name="drawer_menu_games">Games</string>
    <string name="error_empty_field">Empty field</string>
    <string name="error_invalid_credentias">Invalid Credentials</string>
    <string name="drawer_menu_profile">Profile</string>
    <string name="drawer_menu_fav">Favorites</string>
    <string name="drawer_menu_settings">Settings</string>
    <string name="new_title_text">New Title</string>
    <string name="body_text">Body</string>
    <string name="description_text">Description</string>
    <string name="game_text">Game</string>
    <string name="main_menu_fav">Favorites</string>
    <string name="main_menu_settings">Settings</string>
    <string name="games_general">General</string>
    <string name="player_name_text">Player Name</string>
    <string name="games_players">Top Players</string>
    <string name="error_refresh">Cannot Refresh Data</string>
    <string name="refresh_succ">Refresh Succeed</string>
    <string name="created_date_text">Created date</string>
    <string name="biography_text">Biography:</string>
    <string name="gallery_tab_layout">Gallery</string>
    <string name="drawer_menu_logout">Logout</string>
    <string name="token_rip_message">Session Expired!</string>
    <string name="default_email">xxxxxxxxx@xxxxxx.xxxxxx</string>
    <string name="default_name">Authentication needed</string>
    <string name="reset_password_config">RESET PASSWORD</string>
    <string name="repeat_password_text">Repeat password</string>
    <string name="submit_btn_text">SUBMIT</string>
    <string name="new_password_config">New Password</string>
    <string name="no_net">No network founded</string>
    <string name="current_pass_error">Current Password Incorrect</string>
    <string name="empty_fields_error">Empty fields</string>
    <string name="mismatch_error">Mismatch passwords</string>
    <string name="done_msg">Change completed</string>
    <string name="error_api">Something wrong</string>
    <string name="search_value">Search</string>
</resources>
