<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MaterialBlueGrey900"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/news_dialog_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/ic_game_white"
            android:background="@color/MaterialLime900"
            />

    </RelativeLayout>

    <ScrollView
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/news_dialog_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/new_title_text"
                />

            <TextView
                android:id="@+id/news_dialog_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:layout_marginBottom="16dp"
                android:gravity="fill_horizontal"
                android:text="@string/body_text"
                />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/news_dialog_game"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:layout_marginBottom="16dp"
                    android:gravity="fill_horizontal"
                    android:text="@string/game_text"
                    />

                <TextView
                    android:id="@+id/news_dialog_date"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:layout_marginBottom="16dp"
                    android:gravity="fill_horizontal"
                    android:text="@string/created_date_text"
                    />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>