<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/MaterialBlueGrey900"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:id="@+id/player_dialog_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_person"
            android:background="@color/MaterialCyan900"
            />

    </RelativeLayout>

    <ScrollView
        android:background="@color/MaterialBlueGrey900"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/player_dialog_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/player_name_text"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:layout_marginBottom="16dp"
                android:gravity="fill_horizontal"
                android:text="@string/biography_text"
                />

            <TextView
                android:id="@+id/player_dialog_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:layout_marginBottom="16dp"
                android:gravity="fill_horizontal"
                android:text="@string/body_text"
                />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:layout_marginBottom="16dp"
                    android:gravity="fill_horizontal"
                    />

                <TextView
                    android:id="@+id/player_dialog_game"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:layout_marginBottom="16dp"
                    android:gravity="fill_horizontal"
                    android:text="@string/app_slogan"
                    />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>